# pruning-research

./: .gitignore  README.md  research-superwhisper-gating-checklist.md  research-superwhisper.md  superwhisper-entitlement-snapshot.sh
circuit-resynthesis/: README.md  mnist_circuit_resynthesis.py
depth-anything-2/: .gitignore  COMPRESSION_RESEARCH.md  LOCAL_SETUP.md  aggregate_attribution_patching_chunks.py  analyze_attention_head_similarity_da2k.py  analyze_attention_mass_direction_da2k.py  analyze_patch_norm_failure_da2k.py  beam_component_ablation_da2k.py  beam_sparse24_da2k.py  bench_moefication_sparse_fc2.py  ema_filter.py  eval_actual_token_methods_da2k.py  eval_attention_calib_merge_da2k.py  eval_attention_mass_prune_depth_sweep_da2k.py  eval_attribution_patching_da2k.py  eval_circuit_ablation_da2k.py  (+35 more)
unstructured-to-structured/: modal_cifar_airbench.py  modal_pythia_saliency.py  pyproject.toml  research_log_2026-05-26_dgx_spark.md  research_log_2026-05-27_cifar_airbench_modal.md  research_log_2026-05-29_mirage_difference_methods.md
unstructured-to-structured/saliency/: __init__.py  affine_prune_cli.py  affine_scaffold.py  affine_scaffold_cli.py  approx.py  approx_cli.py  calibration.py  cli.py  diagnostics.py  experiment.py  gptq_cli.py  gptq_eval.py  prune_cli.py  prune_eval.py  qronos_eval.py  saliency.py
unstructured-to-structured/tests/: test_affine_scaffold.py  test_approx_saliency.py  test_calibration.py  test_diagnostics.py  test_experiment.py  test_gptq_eval.py  test_modal_cifar_airbench.py  test_prune_eval.py  test_qronos_eval.py  test_saliency.py
(+546 files in other folders)
