[project]
name = "unstructured-to-structured"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "datasets",
    "modal",
    "safetensors",
    "torch",
    "tqdm",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
